--- a/WellenceChallenge/templates/index.html
+++ b/WellenceChallenge/templates/index.html
@@ -11,10 +11,9 @@
     <div class="flexcontainer NavigationBar">
         <h1>Wellence Challenge</h1>
         <div>
-            <button onclick="location.href = 'DataEntry'">Data Entry</button>
+            <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
             <button onclick="location.href = 'DashBoard'">Dashboard</button>
         </div>
-
     </div>
 </body>
 </html>
