--- a/WellenceChallenge/templates/password_verify_link.html
+++ b/WellenceChallenge/templates/password_verify_link.html
@@ -11,17 +11,17 @@
     <div class="flexcontainer NavigationBar">
         <h1>Wellence Challenge</h1>
         <div>
-            <button onclick="location.href = 'password_verify?form=data_entry'">Data Entry</button>
-            <button onclick="location.href = 'DashBoard'">Dashboard</button>
+            <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
+            <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
         </div>
     </div>
-    <form method="post" action="javascript:void(0)" id="password-verify-form" onsubmit="return validatePassword()">
-        {% csrf_token %}
-        <label for="password">Enter Password:</label>
-        <input type="password" id="password" name="password">
-        <button type="submit">Verify</button>
-        <p id="password-verify-message"></p>
-    </form>
+
+
+
+    <label for="password">Enter Password:</label>
+    <input type="password" id="password">
+    <button onclick="validatePassword()">Verify</button>
+    <p id="password-verify-message"></p>
     <script>
         function validatePassword(){
             var password = document.getElementById("password").value;
@@ -30,26 +30,21 @@
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
             xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
             xhr.onload = function() {
-                if (xhr.status == 401) {
-                    var message = document.getElementById("password-verify-message");
-                    message.innerHTML = xhr.responseText;
-                }else if (xhr.status == 302) {
-                    console.log("bruv");
-                    var redirectUrl = xhr.getResponseHeader('X-Accel-Redirect');
-                    if(redirectUrl){
-                        window.location.replace(redirectUrl);
-                    }
-                    else{
-                        redirectUrl = xhr.getResponseHeader('Location');
-                        console.log(redirectUrl);
-                        if(redirectUrl){
-                            window.location.replace(redirectUrl);
-                        }
+                var StatusCode = xhr.status;
+                console.log(StatusCode);
+                if (StatusCode == 200) {
+                    var responseData = JSON.parse(xhr.responseText);
+                    if (responseData.redirect) {
+                        window.location.href = responseData.redirect;
+                    } else {
+                        var message = document.getElementById("password-verify-message");
+                        message.innerHTML = responseData.message;
                     }
                 }
             };
-            xhr.send("password=" + password);
+            xhr.send("password=" + password + "&form=" + (new URLSearchParams(window.location.search).get('form')));
         }
+            
     </script>
 </body>
 </html>
