--- a/WellenceChallenge/templates/index.html
+++ b/WellenceChallenge/templates/index.html
@@ -12,7 +12,7 @@
         <h1>Wellence Challenge</h1>
         <div>
             <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
-            <button onclick="location.href = 'DashBoard'">Dashboard</button>
+            <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
         </div>
     </div>
 </body>
