Attempt at adding graphs
- Tried adding a line chart that shows tasks due in the next 30 days
- Display format has been added
- Does not show the graph throws an error

--- a/WellenceChallenge/templates/index.html
+++ b/WellenceChallenge/templates/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="flexcontainer NavigationBar">
+        <button onclick="location.href = '/'">Home</button>
         <h1>Wellence Challenge</h1>
         <div>
             <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
