--- a/WellenceChallenge/templates/DashBoard.html
+++ b/WellenceChallenge/templates/DashBoard.html
@@ -6,17 +6,20 @@
     <title>DashBoard</title>
     <link rel="stylesheet" href="static/css/style.css">
     <script src="static/script/script.js"></script>
-
 </head>
 <body>
     <div class="flexcontainer NavigationBar">
+        <button onclick="location.href = '/'">Home</button>
         <h1>Wellence Challenge</h1>
         <div>
-            <button onclick="location.href = 'DataEntry'">Data Entry</button>
-            <button onclick="location.href = 'DashBoard'">Dashboard</button>
+            <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
+            <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
         </div>
-
     </div>
+
+    
     <p>Dashboard</p>
+
+
 </body>
 </html>
