--- a/WellenceChallenge/templates/DataEntry.html
+++ b/WellenceChallenge/templates/DataEntry.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <div class="flexcontainer NavigationBar">
+        <button onclick="location.href = '/'">Home</button>
         <h1>Wellence Challenge</h1>
         <div>
-            <button onclick="location.href = 'DataEntry'">Data Entry</button>
-            <button onclick="location.href = 'DashBoard'">Dashboard</button>
+            <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
+            <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
         </div>
-
     </div>
+
+    
     <p>Data Entry</p>
     <form method="POST" onSubmit="event.preventDefault();">
         <label for="email">Email:</label><br>
