--- a/WellenceChallenge/templates/password_verify_link.html
+++ b/WellenceChallenge/templates/password_verify_link.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="flexcontainer NavigationBar">
+        <button onclick="location.href = '/'">Home</button>
         <h1>Wellence Challenge</h1>
         <div>
             <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
