--- a/WellenceChallenge/templates/DashBoard.html
+++ b/WellenceChallenge/templates/DashBoard.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/css/style.css">
     <script src="static/script/script.js"></script>
 </head>
+
 <body>
     <div class="flexcontainer NavigationBar">
         <button onclick="location.href = '/'">Home</button>
@@ -16,10 +17,18 @@
             <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
         </div>
     </div>
+    <div class="flexcontainer" style="width: 35%;">
+        <button id="tasks-due-btn">Tasks Due</button>
+        <button id="tasks-priority-btn">Tasks Priority</button>
+        <button id="urgent-tasks-due-btn">Urgent Tasks Due</button>
+        <button id="all-tasks-btn">All Tasks</button>
+    </div>
 
-    
-    <p>Dashboard</p>
+    <iframe id="DashBoard_Iframe" src="tasks-due-report" frameborder="0"></iframe>
 
+    <script>
+        const switcher = new iframeSwitcher();
 
+    </script>
 </body>
 </html>
