--- a/WellenceChallenge/templates/password_verify_link.html
+++ b/WellenceChallenge/templates/password_verify_link.html
@@ -24,27 +24,49 @@
     <button onclick="validatePassword()">Verify</button>
     <p id="password-verify-message"></p>
     <script>
+        // This function is used to validate the user's input password against the password stored in the database in the backend.
+        // It sends a POST request to the password_verify view with the user's input password and the form name as parameters.
+        // The xhr.onload function is called when the server responds, and it checks if the server's response status code is 200.
+        // If the status code is 200, it parses the response text into a JavaScript object called responseData.
+        // If responseData.redirect exists, it redirects the user to the URL specified in responseData.redirect.
+        // If responseData.redirect does not exist, it updates the HTML of the element with the id "password-verify-message" to display responseData.message.
         function validatePassword(){
+            // Get the value of the password input field
             var password = document.getElementById("password").value;
+            // Create a new XMLHttpRequest object
             var xhr = new XMLHttpRequest();
+            // Set the request method to POST and the URL to password_verify
             xhr.open("POST", "password_verify", true);
+            // Set the Content-Type header to application/x-www-form-urlencoded
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            // Set the X-CSRFToken header to the value of the csrf_token template tag
             xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
+            // Define a function to be called when the server responds
             xhr.onload = function() {
+                // Get the status code of the server's response
                 var StatusCode = xhr.status;
+                // Log the status code to the console
                 console.log(StatusCode);
+                // Check if the status code is 200
                 if (StatusCode == 200) {
+                    // Parse the response text into a JavaScript object called responseData
                     var responseData = JSON.parse(xhr.responseText);
+                    // Check if responseData.redirect exists
                     if (responseData.redirect) {
+                        // Redirect the user to the URL specified in responseData.redirect
                         window.location.href = responseData.redirect;
                     } else {
+                        // Update the HTML of the element with the id "password-verify-message" to display responseData.message
                         var message = document.getElementById("password-verify-message");
                         message.innerHTML = responseData.message;
                     }
                 }
             };
+            // Send the password and form parameters to the password_verify view
             xhr.send("password=" + password + "&form=" + (new URLSearchParams(window.location.search).get('form')));
         }
+
+
             
     </script>
 </body>
