--- a/WellenceChallenge/templates/index.html
+++ b/WellenceChallenge/templates/index.html
@@ -8,15 +8,16 @@
     <script src="static/script/script.js"></script>
 </head>
 <body>
+    
     <div class="flexcontainer NavigationBar">
         <button onclick="location.href = '/'">Home</button>
         <h1>Wellence Challenge</h1>
         <div>
-            <!-- Button to navigate to the password verification page for the Data Entry form -->
-            <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
-            <!-- Button to navigate to the password verification page for the Dashboard -->
-            <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
+            <button onclick="location.href = '/DataEntry'">Data Entry</button>
+            <button onclick="location.href = '/DashBoard'">Dashboard</button>
+
         </div>
     </div>
+
 </body>
 </html>
