--- a/WellenceChallenge/templates/password_verify_link.html
+++ b/WellenceChallenge/templates/password_verify_link.html
@@ -12,62 +12,54 @@
         <button onclick="location.href = '/'">Home</button>
         <h1>Wellence Challenge</h1>
         <div>
-            <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
-            <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
+            <button onclick="location.href = '/DataEntry'">Data Entry</button>
+            <button onclick="location.href = '/DashBoard'">Dashboard</button>
+
         </div>
     </div>
 
 
-
+    <h1>Password Verification</h1>
     <label for="password">Enter Password:</label>
     <input type="password" id="password">
     <button onclick="validatePassword()">Verify</button>
     <p id="password-verify-message"></p>
+
     <script>
-        // This function is used to validate the user's input password against the password stored in the database in the backend.
-        // It sends a POST request to the password_verify view with the user's input password and the form name as parameters.
-        // The xhr.onload function is called when the server responds, and it checks if the server's response status code is 200.
-        // If the status code is 200, it parses the response text into a JavaScript object called responseData.
-        // If responseData.redirect exists, it redirects the user to the URL specified in responseData.redirect.
-        // If responseData.redirect does not exist, it updates the HTML of the element with the id "password-verify-message" to display responseData.message.
+        // This function sends a POST request to the server with the password entered by the user.
+        // If the password is correct, it redirects the user to the page they were trying to access.
+        // If the password is incorrect, it displays an error message.
         function validatePassword(){
-            // Get the value of the password input field
             var password = document.getElementById("password").value;
-            // Create a new XMLHttpRequest object
+            var message = document.getElementById("password-verify-message");
+
             var xhr = new XMLHttpRequest();
-            // Set the request method to POST and the URL to password_verify
-            xhr.open("POST", "password_verify", true);
-            // Set the Content-Type header to application/x-www-form-urlencoded
+            xhr.open("POST", "password_verify_link", true);
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-            // Set the X-CSRFToken header to the value of the csrf_token template tag
             xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
-            // Define a function to be called when the server responds
+
+            // This is the callback function that is called when the server responds.
             xhr.onload = function() {
-                // Get the status code of the server's response
                 var StatusCode = xhr.status;
-                // Log the status code to the console
                 console.log(StatusCode);
-                // Check if the status code is 200
-                if (StatusCode == 200) {
-                    // Parse the response text into a JavaScript object called responseData
+                if (StatusCode == 200 || StatusCode == 401) {
                     var responseData = JSON.parse(xhr.responseText);
-                    // Check if responseData.redirect exists
                     if (responseData.redirect) {
-                        // Redirect the user to the URL specified in responseData.redirect
+                        // If the server returns a redirect URL, redirect the user to that URL.
                         window.location.href = responseData.redirect;
                     } else {
-                        // Update the HTML of the element with the id "password-verify-message" to display responseData.message
-                        var message = document.getElementById("password-verify-message");
+                        // If the server returns a message, display that message to the user.
                         message.innerHTML = responseData.message;
                     }
+                }else{
+                    // If the server returns an error, display the error message to the user.
+                    message.innerHTML = responseData.message;
                 }
             };
-            // Send the password and form parameters to the password_verify view
+            // Send the password and the URL of the page the user was trying to access to the server.
             xhr.send("password=" + password + "&form=" + (new URLSearchParams(window.location.search).get('form')));
         }
-
-
-            
     </script>
+
 </body>
 </html>
