--- a/WellenceChallenge/templates/DashBoard.html
+++ b/WellenceChallenge/templates/DashBoard.html
@@ -15,8 +15,9 @@
         <button onclick="location.href = '/'">Home</button>
         <h1>Wellence Challenge</h1>
         <div>
-            <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
-            <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
+            <button onclick="location.href = '/DataEntry'">Data Entry</button>
+            <button onclick="location.href = '/DashBoard'">Dashboard</button>
+
         </div>
     </div>
     <div class="flexcontainer" style="width: 35%;">
