--- a/WellenceChallenge/templates/DataEntry.html
+++ b/WellenceChallenge/templates/DataEntry.html
@@ -13,30 +13,37 @@
         <button onclick="location.href = '/'">Home</button>
         <h1>Wellence Challenge</h1>
         <div>
-            <button onclick="location.href = 'password_verify_link?form=data_entry'">Data Entry</button>
-            <button onclick="location.href = 'password_verify_link?form=dashboard'">Dashboard</button>
+            <button onclick="location.href = '/DataEntry'">Data Entry</button>
+            <button onclick="location.href = '/DashBoard'">Dashboard</button>
+
         </div>
     </div>
 
-    
-    <p>Data Entry</p>
-    <form method="POST" onSubmit="event.preventDefault();">
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email"><br>
-        <label for="task">Task:</label><br>
-        <input type="text" id="task" name="task"><br>
-        <label for="due_by">Due By:</label><br>
-        <input type="datetime-local" id="due_by" name="due_by"><br>
-        <label for="priority">Priority:</label><br>
-        <select id="priority" name="priority">
-            <option value="1">Low</option>
-            <option value="2">Medium</option>
-            <option value="3">High</option>
-        </select><br>
-        <label for="is_urgent">Is Urgent:</label><br>
-        <input type="checkbox" id="is_urgent" name="is_urgent"><br><br>
-        <button type="submit">Submit</button>
-    </form>
+    <div class="DataEntry_Flexcontainer">
+            <h1>Data Entry</h1>
+            <form class="DataEntry_Container" method="POST" onSubmit="event.preventDefault();">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email">
+                <label for="task">Task:</label>
+                <input type="text" id="task" name="task">
+                <label for="due_by">Due By:</label>
+                <input type="datetime-local" id="due_by" name="due_by">
+                <label for="priority">Priority:</label>
+                <select id="priority" name="priority">
+                    <option value="1">Low</option>
+                    <option value="2">Medium</option>
+                    <option value="3">High</option>
+                </select>
+                <div>
+                    <label for="is_urgent">Is Urgent:</label>
+                    <input type="checkbox" id="is_urgent" name="is_urgent">
+                </div>
+
+                <button type="submit">Submit</button>
+            </form>
+
+    </div>
+
     <script>
         // Get the form element and attach a submit event listener
         const form = document.querySelector('form');
