--- a/WellenceChallenge/templates/password_verify_link.html
+++ b/WellenceChallenge/templates/password_verify_link.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wellence Challenge</title>
-    <link rel="stylesheet" href="static/css/style.css">
-    <script src="static/script/script.js"></script>
+    <link rel="stylesheet" href="static/css/password_verify_link.css">
 </head>
 <body>
     <div class="flexcontainer NavigationBar">
@@ -14,52 +13,21 @@
         <div>
             <button onclick="location.href = '/DataEntry'">Data Entry</button>
             <button onclick="location.href = '/DashBoard'">Dashboard</button>
-
         </div>
     </div>
 
-
-    <h1>Password Verification</h1>
-    <label for="password">Enter Password:</label>
-    <input type="password" id="password">
-    <button onclick="validatePassword()">Verify</button>
-    <p id="password-verify-message"></p>
-
-    <script>
-        // This function sends a POST request to the server with the password entered by the user.
-        // If the password is correct, it redirects the user to the page they were trying to access.
-        // If the password is incorrect, it displays an error message.
-        function validatePassword(){
-            var password = document.getElementById("password").value;
-            var message = document.getElementById("password-verify-message");
-
-            var xhr = new XMLHttpRequest();
-            xhr.open("POST", "password_verify_link", true);
-            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-            xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
-
-            // This is the callback function that is called when the server responds.
-            xhr.onload = function() {
-                var StatusCode = xhr.status;
-                console.log(StatusCode);
-                if (StatusCode == 200 || StatusCode == 401) {
-                    var responseData = JSON.parse(xhr.responseText);
-                    if (responseData.redirect) {
-                        // If the server returns a redirect URL, redirect the user to that URL.
-                        window.location.href = responseData.redirect;
-                    } else {
-                        // If the server returns a message, display that message to the user.
-                        message.innerHTML = responseData.message;
-                    }
-                }else{
-                    // If the server returns an error, display the error message to the user.
-                    message.innerHTML = responseData.message;
-                }
-            };
-            // Send the password and the URL of the page the user was trying to access to the server.
-            xhr.send("password=" + password + "&form=" + (new URLSearchParams(window.location.search).get('form')));
-        }
-    </script>
-
+    <div class="login-container">
+        <form class="login-form" action="{% url 'password_verify_link' %}" method="post">
+            {% csrf_token %}
+            <h2>User Login</h2>
+            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <input type="hidden" name="next" value="{{ next }}">
+            <button type="submit">Login</button>
+        </form>
+        {% if error_message %}
+        <p class="error">{{ error_message }}</p>
+        {% endif %}
+    </div>
 </body>
 </html>
